--- a/Information-System/src/main/resources/templates/suppliers.html
+++ b/Information-System/src/main/resources/templates/suppliers.html
@@ -23,6 +23,10 @@
             <div class="col-md-3">
                 <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
             </div>
+            <div class="col-md-3 form-check d-flex align-items-center">
+                <input class="form-check-input" type="checkbox" name="includeNoProducts" id="includeNoProducts" th:checked="${param.includeNoProducts}">
+                <label class="form-check-label ms-2" for="includeNoProducts">Постачальники які наразі не постачають продукти</label>
+            </div>
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Застосувати фільтр</button>
@@ -36,6 +40,8 @@
             <th>Назва</th>
             <th>Контакт</th>
             <th>Адреса</th>
+            <th th:if="${includeNoProducts}">ID Продукту</th>
+            <th th:if="${includeNoProducts}">Назва Продукту</th>
             <th>Дії</th>
         </tr>
         </thead>
@@ -45,6 +51,8 @@
             <td th:text="${supplier['name']}"></td>
             <td th:text="${supplier['contact']}"></td>
             <td th:text="${supplier['address']}"></td>
+            <td th:if="${includeNoProducts}" th:text="${supplier['product_id']}"></td>
+            <td th:if="${includeNoProducts}" th:text="${supplier['product_name']}"></td>
             <td>
                 <a th:href="@{'/suppliers/edit/' + ${supplier['id']}}" class="btn btn-warning btn-sm">Редагувати</a>
                 <a th:href="@{'/suppliers/delete/' + ${supplier['id']}}" class="btn btn-danger btn-sm">Видалити</a>
