--- a/Information-System/src/main/resources/templates/categories.html
+++ b/Information-System/src/main/resources/templates/categories.html
@@ -17,7 +17,7 @@
             <div class="col-md-4 d-flex align-items-center">
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" name="withProducts" id="withProducts" th:checked="${param.withProducts}">
-                    <label class="form-check-label" for="withProducts">Лише категорії з продуктами (DISTINCT)</label>
+                    <label class="form-check-label" for="withProducts">Лише категорії з продуктами</label>
                 </div>
             </div>
         </div>
