--- a/Information-System/src/main/resources/templates/clients.html
+++ b/Information-System/src/main/resources/templates/clients.html
@@ -22,8 +22,8 @@
         <div class="col-md-3">
             <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
         </div>
-        <div class="col-md-2">
-            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть замовлення ≥" th:value="${param.havingCount}">
+        <div class="col-md-3">
+            <input type="number" class="form-control" name="havingCount" placeholder="К-сть замовлення ≥" th:value="${param.havingCount}">
         </div>
         <div class="col-md-12">
             <div class="form-check form-check-inline">
