--- a/Information-System/src/main/resources/templates/orders.html
+++ b/Information-System/src/main/resources/templates/orders.html
@@ -23,10 +23,10 @@
             </select>
         </div>
         <div class="col-md-3">
-            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть замовлень ≥" th:value="${param.havingCount}">
+            <input type="number" class="form-control" name="havingCount" placeholder="К-сть замовлень ≥" th:value="${param.havingCount}">
         </div>
-        <div class="col-md-3">
-            <input type="number" class="form-control" name="minOrdersCount" placeholder="Клієнтів, які зробили ≥ N замовлень" th:value="${param.minOrdersCount}">
+        <div class="col-md-4">
+            <input type="number" class="form-control" name="minOrdersCount" placeholder="Клієнти, які зробили ≥ N замовлень" th:value="${param.minOrdersCount}">
         </div>
         <div class="col-md-3">
             <select class="form-select" name="productCategoryId">
