--- a/Information-System/src/main/resources/templates/shipments.html
+++ b/Information-System/src/main/resources/templates/shipments.html
@@ -23,7 +23,7 @@
             </select>
         </div>
         <div class="col-md-3">
-            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть відвантажень ≥" th:value="${param.havingCount}">
+            <input type="number" class="form-control" name="havingCount" placeholder="К-сть відвантажень ≥" th:value="${param.havingCount}">
         </div>
         <div class="col-md-12">
             <div class="form-check form-check-inline">
