--- a/Information-System/src/main/resources/templates/products.html
+++ b/Information-System/src/main/resources/templates/products.html
@@ -63,6 +63,10 @@
                 <label class="form-check-label" for="showUniqueMaterials">Показати матеріали продуктів</label>
             </div>
             <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="priceGreaterThanAnyInCategory" id="priceGreaterThanAnyInCategory" th:checked="${param.priceGreaterThanAnyInCategory} == 'on'">
+                <label class="form-check-label" for="priceGreaterThanAnyInCategory">Ціна більша за будь-яку у категорії</label>
+            </div>
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" name="showAggregates" id="showAggregates" th:checked="${param.showAggregates}">
                 <label class="form-check-label" for="showAggregates">Показати аналітичні підсумки</label>
             </div>
