--- a/Information-System/src/main/resources/templates/products.html
+++ b/Information-System/src/main/resources/templates/products.html
@@ -59,6 +59,10 @@
                 <label class="form-check-label" for="maxPrice">Ціна = MAX</label>
             </div>
             <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="minPrice" id="minPrice" th:checked="${param.minPrice}">
+                <label class="form-check-label" for="minPrice">Ціна = MIN</label>
+            </div>
+            <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" name="showUniqueMaterials" id="showUniqueMaterials" th:checked="${param.showUniqueMaterials}">
                 <label class="form-check-label" for="showUniqueMaterials">Показати матеріали продуктів</label>
             </div>
